--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.19",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
     "morgan": "^1.9.1",
